RESOLVED FIXED25713
AX: Control Elements not identified in HTML content
https://bugs.webkit.org/show_bug.cgi?id=25713
Summary AX: Control Elements not identified in HTML content
chris fleizach
Reported 2009-05-11 18:40:29 PDT
onclick handlers are not identified as such for AX
Attachments
patch (3.42 KB, patch)
2009-05-11 18:42 PDT, chris fleizach
bdakin: review+
chris fleizach
Comment 1 2009-05-11 18:41:01 PDT
if an AXStaticText has an mouse listener, it should expose AXPress as an action
chris fleizach
Comment 2 2009-05-11 18:42:29 PDT
Beth Dakin
Comment 3 2009-05-11 18:46:04 PDT
Comment on attachment 30213 [details] patch r=me
chris fleizach
Comment 4 2009-05-11 18:50:26 PDT
Note You need to log in before you can comment on or make changes to this bug.