Bug 25713: AX: Control Elements not identified in HTML content https://bugs.webkit.org/show_bug.cgi?id=25713

Canonical link: https://commits.webkit.org/35525@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@43538 268f45cc-cd09-0410-ab3c-d52691b4dbfc